# mc

./: .gitignore  CMakeLists.txt  files.sh
doc/man/: mc.1.in
doc/man/ru/: mc.1.in
lib/: charsets.cpp  charsets.hpp  event-types.hpp  event.hpp  filehighlight.hpp  fileloc.hpp  fs.hpp  glibcompat.cpp  glibcompat.hpp  global.cpp  global.hpp  hook.cpp  hook.hpp  keybind.cpp  keybind.hpp  lock.cpp  lock.hpp  logging.cpp  logging.hpp  mcconfig.hpp  search.hpp  serialize.cpp  serialize.hpp  shell.cpp  shell.hpp  skin.hpp  stat-size.hpp  strescape.hpp  strutil.hpp  timefmt.cpp  timefmt.hpp  timer.cpp  timer.hpp  unixcompat.hpp  util.cpp  util.hpp  utilunix.cpp  utilunix.hpp  widget.hpp
lib/event/: event.cpp  internal.hpp  manage.cpp  raise.cpp
lib/filehighlight/: common.cpp  get-color.cpp  ini-file-read.cpp  internal.hpp
lib/mcconfig/: common.cpp  get.cpp  history.cpp  paths.cpp  set.cpp
lib/search/: glob.cpp  hex.cpp  internal.hpp  lib.cpp  normal.cpp  regex.cpp  search.cpp
lib/skin/: colors-old.cpp  colors.cpp  common.cpp  hc-skins.cpp  ini-file.cpp  internal.hpp  lines.cpp
lib/strutil/: filevercmp.cpp  replace.cpp  strescape.cpp  strutil.cpp  strutil8bit.cpp  strutilascii.cpp  strutilutf8.cpp  strverscmp.cpp  xstrtol.cpp
lib/tty/: color-internal.cpp  color-internal.hpp  color-ncurses.cpp  color-slang.cpp  color-slang.hpp  color.cpp  color.hpp  key.cpp  key.hpp  keyxdef.cpp  mouse.cpp  mouse.hpp  tty-internal.cpp  tty-internal.hpp  tty-ncurses.cpp  tty-ncurses.hpp  tty-slang.cpp  tty-slang.hpp  tty.cpp  tty.hpp  win.cpp  win.hpp  x11conn.cpp  x11conn.hpp
lib/vfs/: direntry.cpp  gc.cpp  gc.hpp  interface.cpp  netutil.cpp  netutil.hpp  parse_ls_vga.cpp  path.cpp  path.hpp  utilvfs.cpp  utilvfs.hpp  vfs.cpp  vfs.hpp  xdirentry.hpp
lib/widget/: background.cpp  background.hpp  button.cpp  button.hpp  buttonbar.cpp  buttonbar.hpp  check.cpp  check.hpp  dialog-switch.cpp  dialog-switch.hpp  dialog.cpp  dialog.hpp  frame.cpp  frame.hpp  gauge.cpp  gauge.hpp  group.cpp  group.hpp  groupbox.cpp  groupbox.hpp  history.cpp  history.hpp  hline.cpp  hline.hpp  input.cpp  input.hpp  input_complete.cpp  input_complete.hpp  label.cpp  label.hpp  listbox-window.cpp  listbox-window.hpp  listbox.cpp  listbox.hpp  menu.cpp  menu.hpp  mouse.cpp  mouse.hpp  quick.cpp  quick.hpp  (+8 more)
maint/templates/: template.hpp
src/: args.cpp  args.hpp  background.cpp  background.hpp  clipboard.cpp  clipboard.hpp  cons.handler.cpp  events_init.cpp  events_init.hpp  execute.cpp  execute.hpp  file_history.cpp  file_history.hpp  help.c  help.cpp  help.hpp  history.hpp  keybind-defaults.cpp  keybind-defaults.hpp  learn.cpp  learn.hpp  main.cpp  selcodepage.cpp  selcodepage.hpp  setup.cpp  setup.hpp  textconf.cpp  textconf.hpp  usermenu.cpp  usermenu.hpp  util.cpp  util.hpp
src/consaver/: cons.saver.cpp  cons.saver.hpp
src/diffviewer/: internal.hpp  search.cpp  ydiff.cpp  ydiff.hpp
src/editor/: bookmark.cpp  choosesyntax.cpp  edit-impl.hpp  edit.cpp  edit.hpp  editbuffer.cpp  editbuffer.hpp  editcmd.cpp  editcmd_dialogs.cpp  editcmd_dialogs.hpp  editdraw.cpp  editmenu.cpp  editoptions.cpp  editwidget.cpp  editwidget.hpp  etags.cpp  etags.hpp  format.cpp  spell.cpp  spell.hpp  spell_dialogs.cpp  spell_dialogs.hpp  syntax.cpp
src/filemanager/: Makefile.am  achown.cpp  achown.hpp  boxes.cpp  boxes.hpp  chmod.cpp  chmod.hpp  chown.cpp  chown.hpp  cmd.cpp  cmd.hpp  command.cpp  command.hpp  dir.cpp  dir.hpp  ext.cpp  ext.hpp  file.cpp  file.hpp  filegui.cpp  filegui.hpp  filenot.cpp  filenot.hpp  fileopctx.cpp  fileopctx.hpp  find.cpp  find.hpp  hotlist.cpp  hotlist.hpp  info.cpp  info.hpp  ioblksize.hpp  layout.cpp  layout.hpp  listmode.cpp  listmode.hpp  midnight.c  midnight.cpp  midnight.hpp  mountlist.cpp  (+9 more)
src/subshell/: common.cpp  internal.hpp  proxyfunc.cpp  subshell.hpp
src/vfs/: plugins_init.cpp  plugins_init.hpp
src/vfs/cpio/: cpio.cpp  cpio.hpp
src/vfs/extfs/: extfs.cpp  extfs.hpp
src/vfs/fish/: fish.cpp  fish.hpp  fishdef.hpp
src/vfs/ftpfs/: ftpfs.cpp  ftpfs.hpp
src/vfs/local/: local.cpp  local.hpp
src/vfs/sfs/: sfs.cpp  sfs.hpp
src/vfs/sftpfs/: config_parser.cpp  connection.cpp  dir.cpp  file.cpp  init.cpp  init.hpp  internal.cpp  internal.hpp  vfs_class.cpp  vfs_subclass.cpp
src/vfs/smbfs/: smbfs.cpp  smbfs.hpp
src/vfs/smbfs/helpers/include/: byteorder.hpp  charset.hpp  client.hpp  includes.hpp  kanji.hpp  local.hpp  nameserv.hpp  nterr.hpp  proto.hpp  smb.hpp  trans2.hpp
src/vfs/smbfs/helpers/lib/: charcnv.cpp  charset.cpp  debug.cpp  interface.cpp  kanji.cpp  md4.cpp  netmask.cpp  slprintf.cpp  system.cpp  time.cpp  username.cpp  util.cpp  util_file.cpp  util_sock.cpp  util_str.cpp
src/vfs/smbfs/helpers/libsmb/: clientgen.cpp  namequery.cpp  nmblib.cpp  nterr.cpp  pwd_cache.cpp  smbdes.cpp  smbencrypt.cpp  smberr.cpp
src/vfs/smbfs/helpers/param/: loadparm.cpp  params.cpp
src/vfs/tar/: tar.cpp  tar.hpp
src/vfs/undelfs/: undelfs.cpp  undelfs.hpp
src/viewer/: WView.hpp  actions_cmd.cpp  actions_cmd.hpp  ascii.cpp  ascii.hpp  coord_cache.cpp  coord_cache.hpp  datasource.cpp  datasource.hpp  dialogs.cpp  dialogs.hpp  display.cpp  display.hpp  growbuf.cpp  growbuf.hpp  hex.cpp  hex.hpp  inlines.hpp  internal.hpp  lib.cpp  lib.hpp  mcviewer.cpp  mcviewer.hpp  move.cpp  move.hpp  nroff.cpp  nroff.hpp  search.cpp  search.hpp
